// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatsTestCases should print correct stats for auxiliary-files-test 1`] = `
"PublicPath: (none)
asset 220e6fb336d7b999e76d.png 7 bytes {main} [emitted] (name: main)
asset bundle.js 459 bytes {main} [emitted] (name: main)
Entrypoint main 459 bytes = bundle.js
chunk {main} bundle.js (main) [entry]
  ./raw.png [692] {main}
    esm import ./raw.png [10]
  ./index.js [10] {main}
    entry ./index
  ./stringModule.js [363] {main}
    esm import ./stringModule [10]
./raw.png [692] {main}
  esm import ./raw.png [10]
./index.js [10] {main}
  entry ./index
./stringModule.js [363] {main}
  esm import ./stringModule [10]
Rspack compiled successfully (284a08e9097a65a2de53)"
`;

exports[`StatsTestCases should print correct stats for filename 1`] = `
"PublicPath: (none)
asset dynamic_js.xxxx.js 138 bytes {dynamic_js} [emitted]
asset main.xxxx.js 1.07 KiB {main} [emitted] (name: main)
Entrypoint main 1.07 KiB = main.xxxx.js
chunk {dynamic_js} dynamic_js.xxxx.js <{main}>
  ./dynamic.js [426] {dynamic_js}
    dynamic import ./dynamic [10]
chunk {main} main.xxxx.js (main) >{dynamic_js}< [entry]
  ./index.js [10] {main}
    entry ./index
./index.js [10] {main}
  entry ./index
./dynamic.js [426] {dynamic_js}
  dynamic import ./dynamic [10]
Rspack compiled successfully (3290e10b2fba8a8bd75a)"
`;

exports[`StatsTestCases should print correct stats for hot+production 1`] = `
"PublicPath: (none)
asset bundle.js 8.89 KiB {main} [emitted] (name: main)
Entrypoint main 8.89 KiB = bundle.js
chunk {main} bundle.js (main) [entry]
  ./index.js [10] {main}
    entry ./index.js
./index.js [10] {main}
  entry ./index.js
Rspack compiled successfully (869c6983b495c7e3ace1)"
`;

exports[`StatsTestCases should print correct stats for identifier-let-strict-mode 1`] = `
"error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/identifier-let-strict-mode/index.js:1:5
  │
1 │ let let = let;
  │     ^^^ \`let\` cannot be used as an identifier in strict mode
2 │ 



error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/identifier-let-strict-mode/index.js:1:11
  │
1 │ let let = let;
  │           ^^^ \`let\` cannot be used as an identifier in strict mode
2 │ 



Rspack compiled with 2 errors"
`;

exports[`StatsTestCases should print correct stats for ignore-plugin 1`] = `
"./index.js
./locals/en.js
<PROJECT_ROOT>/tests/statsCases/ignore-plugin/locals/./zh.js (missing)
<PROJECT_ROOT>/tests/statsCases/ignore-plugin/./globalIndex.js (missing)
<PROJECT_ROOT>/tests/statsCases/ignore-plugin/locals|None|None|ContextOptions { mode: Sync, recursive: true, reg_exp: Some(RspackRegex { algo: Regress(Regex { cr: CompiledRegex { insns: [StartOfLine, ByteSeq2([46, 47]), Loop1CharBody { min_iters: 0, max_iters: 18446744073709551615, greedy: true }, MatchAnyExceptLineTerminator, EndOfLine, Goal], brackets: [], start_pred: Arbitrary, loops: 0, groups: 0, named_group_indices: {}, flags: Flags { icase: false, multiline: false, dot_all: false, no_opt: false, unicode: false } } }), raw: "^//.///.*$|" }), reg_str: "^//.///.*$", include: None, exclude: None, category: CommonJS, request: "./locals", namespace_object: Unset }"
`;

exports[`StatsTestCases should print correct stats for ignore-warning 1`] = `"Rspack compiled successfully"`;

exports[`StatsTestCases should print correct stats for issue-3558 1`] = `"Rspack compiled successfully"`;

exports[`StatsTestCases should print correct stats for legacy-ie-css-warning 1`] = `"Rspack compiled successfully"`;

exports[`StatsTestCases should print correct stats for limit-chunk-count-plugin 1`] = `
"1 chunks:
  PublicPath: (none)
  asset bundle1.js 1.5 KiB [emitted] (name: main)
  Entrypoint main 1.5 KiB = bundle1.js
  chunk bundle1.js (main) <{main}> >{main}< [entry]
    ./b.js
    ./c.js
    ./d.js
    ./e.js
    ./index.js
  1 chunks (Rspack 0.3.8) compiled successfully in X ms

2 chunks:
  PublicPath: (none)
  asset bundle2.js 1.58 KiB [emitted] (name: main)
  asset c.bundle2.js 205 bytes [emitted] (name: c)
  Entrypoint main 1.58 KiB = bundle2.js
  chunk c.bundle2.js (c) <{c}> <{main}> >{c}<
    ./c.js
    ./d.js
    ./e.js
  chunk bundle2.js (main) >{c}< [entry]
    ./b.js
    ./index.js
  2 chunks (Rspack 0.3.8) compiled successfully in X ms

3 chunks:
  PublicPath: (none)
  asset bundle3.js 1.63 KiB [emitted] (name: main)
  asset c.bundle3.js 135 bytes [emitted] (name: c)
  asset d_js~e_js.bundle3.js 114 bytes [emitted]
  Entrypoint main 1.63 KiB = bundle3.js
  chunk c.bundle3.js (c) <{main}> >{d_js~e_js}<
    ./c.js
  chunk d_js~e_js.bundle3.js <{c}>
    ./d.js
    ./e.js
  chunk bundle3.js (main) >{c}< [entry]
    ./b.js
    ./index.js
  3 chunks (Rspack 0.3.8) compiled successfully in X ms

4 chunks:
  PublicPath: (none)
  asset bundle4.js 1.63 KiB [emitted] (name: main)
  asset c.bundle4.js 135 bytes [emitted] (name: c)
  asset d_js.bundle4.js 74 bytes [emitted]
  asset e_js.bundle4.js 74 bytes [emitted]
  Entrypoint main 1.63 KiB = bundle4.js
  chunk c.bundle4.js (c) <{main}> >{d_js}< >{e_js}<
    ./c.js
  chunk d_js.bundle4.js <{c}>
    ./d.js
  chunk e_js.bundle4.js <{c}>
    ./e.js
  chunk bundle4.js (main) >{c}< [entry]
    ./b.js
    ./index.js
  4 chunks (Rspack 0.3.8) compiled successfully in X ms"
`;

exports[`StatsTestCases should print correct stats for limit-chunk-count-plugin 2`] = `
"1 chunks:
  PublicPath: (none)
  asset bundle1.js 1.5 KiB [emitted] (name: main)
  Entrypoint main 1.5 KiB = bundle1.js
  chunk bundle1.js (main) <{main}> >{main}< [entry]
    ./b.js
    ./c.js
    ./d.js
    ./e.js
    ./index.js
  1 chunks (Rspack 0.3.8) compiled successfully in X ms

2 chunks:
  PublicPath: (none)
  asset bundle2.js 1.58 KiB [emitted] (name: main)
  asset c.bundle2.js 205 bytes [emitted] (name: c)
  Entrypoint main 1.58 KiB = bundle2.js
  chunk c.bundle2.js (c) <{c}> <{main}> >{c}<
    ./c.js
    ./d.js
    ./e.js
  chunk bundle2.js (main) >{c}< [entry]
    ./b.js
    ./index.js
  2 chunks (Rspack 0.3.8) compiled successfully in X ms

3 chunks:
  PublicPath: (none)
  asset bundle3.js 1.63 KiB [emitted] (name: main)
  asset c.bundle3.js 135 bytes [emitted] (name: c)
  asset d_js~e_js.bundle3.js 114 bytes [emitted]
  Entrypoint main 1.63 KiB = bundle3.js
  chunk c.bundle3.js (c) <{main}> >{d_js~e_js}<
    ./c.js
  chunk d_js~e_js.bundle3.js <{c}>
    ./d.js
    ./e.js
  chunk bundle3.js (main) >{c}< [entry]
    ./b.js
    ./index.js
  3 chunks (Rspack 0.3.8) compiled successfully in X ms

4 chunks:
  PublicPath: (none)
  asset bundle4.js 1.63 KiB [emitted] (name: main)
  asset c.bundle4.js 135 bytes [emitted] (name: c)
  asset d_js.bundle4.js 74 bytes [emitted]
  asset e_js.bundle4.js 74 bytes [emitted]
  Entrypoint main 1.63 KiB = bundle4.js
  chunk c.bundle4.js (c) <{main}> >{d_js}< >{e_js}<
    ./c.js
  chunk d_js.bundle4.js <{c}>
    ./d.js
  chunk e_js.bundle4.js <{c}>
    ./e.js
  chunk bundle4.js (main) >{c}< [entry]
    ./b.js
    ./index.js
  4 chunks (Rspack 0.3.8) compiled successfully in X ms"
`;

exports[`StatsTestCases should print correct stats for limit-chunk-count-plugin 3`] = `
"1 chunks:
  PublicPath: (none)
  asset bundle1.js 1.5 KiB [emitted] (name: main)
  Entrypoint main 1.5 KiB = bundle1.js
  chunk bundle1.js (main) <{main}> >{main}< [entry]
    ./b.js
    ./c.js
    ./d.js
    ./e.js
    ./index.js
  1 chunks (Rspack 0.3.8) compiled successfully in X ms

2 chunks:
  PublicPath: (none)
  asset bundle2.js 1.58 KiB [emitted] (name: main)
  asset c.bundle2.js 205 bytes [emitted] (name: c)
  Entrypoint main 1.58 KiB = bundle2.js
  chunk c.bundle2.js (c) <{c}> <{main}> >{c}<
    ./c.js
    ./d.js
    ./e.js
  chunk bundle2.js (main) >{c}< [entry]
    ./b.js
    ./index.js
  2 chunks (Rspack 0.3.8) compiled successfully in X ms

3 chunks:
  PublicPath: (none)
  asset bundle3.js 1.63 KiB [emitted] (name: main)
  asset c.bundle3.js 135 bytes [emitted] (name: c)
  asset d_js~e_js.bundle3.js 114 bytes [emitted]
  Entrypoint main 1.63 KiB = bundle3.js
  chunk c.bundle3.js (c) <{main}> >{d_js~e_js}<
    ./c.js
  chunk d_js~e_js.bundle3.js <{c}>
    ./d.js
    ./e.js
  chunk bundle3.js (main) >{c}< [entry]
    ./b.js
    ./index.js
  3 chunks (Rspack 0.3.8) compiled successfully in X ms

4 chunks:
  PublicPath: (none)
  asset bundle4.js 1.63 KiB [emitted] (name: main)
  asset c.bundle4.js 135 bytes [emitted] (name: c)
  asset d_js.bundle4.js 74 bytes [emitted]
  asset e_js.bundle4.js 74 bytes [emitted]
  Entrypoint main 1.63 KiB = bundle4.js
  chunk c.bundle4.js (c) <{main}> >{d_js}< >{e_js}<
    ./c.js
  chunk d_js.bundle4.js <{c}>
    ./d.js
  chunk e_js.bundle4.js <{c}>
    ./e.js
  chunk bundle4.js (main) >{c}< [entry]
    ./b.js
    ./index.js
  4 chunks (Rspack 0.3.8) compiled successfully in X ms"
`;

exports[`StatsTestCases should print correct stats for limit-chunk-count-plugin 4`] = `
"1 chunks:
  PublicPath: (none)
  asset bundle1.js 1.5 KiB [emitted] (name: main)
  Entrypoint main 1.5 KiB = bundle1.js
  chunk bundle1.js (main) <{main}> >{main}< [entry]
    ./b.js
    ./c.js
    ./d.js
    ./e.js
    ./index.js
  1 chunks (Rspack 0.3.8) compiled successfully in X ms

2 chunks:
  PublicPath: (none)
  asset bundle2.js 1.58 KiB [emitted] (name: main)
  asset c.bundle2.js 205 bytes [emitted] (name: c)
  Entrypoint main 1.58 KiB = bundle2.js
  chunk c.bundle2.js (c) <{c}> <{main}> >{c}<
    ./c.js
    ./d.js
    ./e.js
  chunk bundle2.js (main) >{c}< [entry]
    ./b.js
    ./index.js
  2 chunks (Rspack 0.3.8) compiled successfully in X ms

3 chunks:
  PublicPath: (none)
  asset bundle3.js 1.63 KiB [emitted] (name: main)
  asset c.bundle3.js 135 bytes [emitted] (name: c)
  asset d_js~e_js.bundle3.js 114 bytes [emitted]
  Entrypoint main 1.63 KiB = bundle3.js
  chunk c.bundle3.js (c) <{main}> >{d_js~e_js}<
    ./c.js
  chunk d_js~e_js.bundle3.js <{c}>
    ./d.js
    ./e.js
  chunk bundle3.js (main) >{c}< [entry]
    ./b.js
    ./index.js
  3 chunks (Rspack 0.3.8) compiled successfully in X ms

4 chunks:
  PublicPath: (none)
  asset bundle4.js 1.63 KiB [emitted] (name: main)
  asset c.bundle4.js 135 bytes [emitted] (name: c)
  asset d_js.bundle4.js 74 bytes [emitted]
  asset e_js.bundle4.js 74 bytes [emitted]
  Entrypoint main 1.63 KiB = bundle4.js
  chunk c.bundle4.js (c) <{main}> >{d_js}< >{e_js}<
    ./c.js
  chunk d_js.bundle4.js <{c}>
    ./d.js
  chunk e_js.bundle4.js <{c}>
    ./e.js
  chunk bundle4.js (main) >{c}< [entry]
    ./b.js
    ./index.js
  4 chunks (Rspack 0.3.8) compiled successfully in X ms"
`;

exports[`StatsTestCases should print correct stats for loader-builtin-swc-plugin-warn 1`] = `
"warning[internal]: Experimental plugins are not currently supported.



Rspack compiled with 1 warning"
`;

exports[`StatsTestCases should print correct stats for logging 1`] = `
"DEBUG LOG from TestLoader|<PROJECT_ROOT>/tests/statsCases/logging/index.js
<-> group
  <i> info something
      log something
    -------
"
`;

exports[`StatsTestCases should print correct stats for minify-error-recovery 1`] = `
"error[javascript]: JavaScript parsing error
  ┌─ bundle.js:1:9
  │
1 │ const a {}
  │         ^ Expected a semicolon
2 │ (function() {
3 │ var __webpack_modules__ = {
4 │ "10": function (__unused_webpack_module, exports, __webpack_require__) {
5 │ console.log(0);



Rspack compiled with 1 error"
`;

exports[`StatsTestCases should print correct stats for named-chunk-group 1`] = `
"Entrypoint main 1.04 KiB = bundle.js
Chunk Group cimanyd 135 bytes = cimanyd.bundle.js"
`;

exports[`StatsTestCases should print correct stats for normal-errors 1`] = `
"error[internal]: Resolve error
  ┌─ tests/statsCases/normal-errors/index.js:1:1
  │
1 │ import "not-exist";
  │ ^^^^^^^^^^^^^^^^^^^ Failed to resolve not-exist in <PROJECT_ROOT>/tests/statsCases/normal-errors/index.js
2 │ 



Rspack compiled with 1 error"
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk 1`] = `
"Entrypoint e1 2.8 KiB = e1~runtime.js 2.4 KiB e1.js 412 bytes
Entrypoint e2 2.8 KiB = e2~runtime.js 2.4 KiB e2.js 412 bytes
chunk e1.js (e1) [entry]
chunk e1~runtime.js (e1~runtime) [initial]
chunk e2.js (e2) [entry]
chunk e2~runtime.js (e2~runtime) [initial]"
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-multiple 1`] = `
"Entrypoint e1 2.8 KiB = runtime~e1.js 2.4 KiB e1.js 406 bytes
Entrypoint e2 2.8 KiB = runtime~e2.js 2.4 KiB e2.js 406 bytes
chunk e1.js (e1) [entry]
chunk e2.js (e2) [entry]
chunk runtime~e1.js (runtime~e1) [initial]
chunk runtime~e2.js (runtime~e2) [initial]"
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-single 1`] = `
"Entrypoint e1 2.8 KiB = runtime.js 2.4 KiB e1.js 409 bytes
Entrypoint e2 2.8 KiB = runtime.js 2.4 KiB e2.js 409 bytes
chunk e1.js (e1) [entry]
chunk e2.js (e2) [entry]
chunk runtime.js (runtime) [initial]"
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-true 1`] = `
"Entrypoint e1 2.8 KiB = runtime~e1.js 2.4 KiB e1.js 406 bytes
Entrypoint e2 2.8 KiB = runtime~e2.js 2.4 KiB e2.js 406 bytes
chunk e1.js (e1) [entry]
chunk e2.js (e2) [entry]
chunk runtime~e1.js (runtime~e1) [initial]
chunk runtime~e2.js (runtime~e2) [initial]"
`;

exports[`StatsTestCases should print correct stats for parse-error 1`] = `
"error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/parse-error/b.js:6:8
  │
2 │ code
3 │ which
4 │ includes
5 │ a
6 │ parser )
  │        ^ Expected ';', '}' or <eof>
7 │ error
8 │ in
9 │ some
10 │ line



Rspack compiled with 1 error"
`;

exports[`StatsTestCases should print correct stats for parse-error-builtin-swc-loader 1`] = `
"error[internal]: 
  x Expected '{', got 'error'
   ,-[<PROJECT_ROOT>/tests/statsCases/parse-error-builtin-swc-loader/index.ts:1:1]
 1 | export error;
   :        ^^^^^
   \`----




Rspack compiled with 1 error"
`;

exports[`StatsTestCases should print correct stats for reasons 1`] = `
"./a.js
  cjs require ./a
./index.js
  entry ./index"
`;

exports[`StatsTestCases should print correct stats for resolve-overflow 1`] = `
"PublicPath: auto
asset bundle.js 725 bytes {main} [emitted] (name: main)
Entrypoint main 725 bytes = bundle.js
chunk {main} bundle.js (main) [entry]
  ./index.js [10] {main}
    entry ./index
  <PROJECT_ROOT>/tests/statsCases/resolve-overflow/cycle-alias/a (missing) [280] {main}
    esm import cycle-alias/a [10]
    esm import specifier cycle-alias/a [10]
./index.js [10] {main}
  entry ./index
<PROJECT_ROOT>/tests/statsCases/resolve-overflow/cycle-alias/a (missing) [280] {main}
  esm import cycle-alias/a [10]
  esm import specifier cycle-alias/a [10]

error[internal]: Resolve error
  ┌─ tests/statsCases/resolve-overflow/index.js:1:1
  │
1 │ import { a } from "cycle-alias/a";
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Can't resolve "cycle-alias/a" in <PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js , maybe it had cycle alias
2 │ console.log(a);
3 │ 



Rspack compiled with 1 error (60c0b28697ddcc279184)"
`;

exports[`StatsTestCases should print correct stats for resolve-unexpected-exports-in-pkg 1`] = `
"PublicPath: (none)
asset bundle.js 741 bytes {main} [emitted] (name: main)
Entrypoint main 741 bytes = bundle.js
chunk {main} bundle.js (main) [entry]
  ./index.js [10] {main}
    entry ./index
  <PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/pkg-a (missing) [788] {main}
    esm import pkg-a [10]
    esm import specifier pkg-a [10]
./index.js [10] {main}
  entry ./index
<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/pkg-a (missing) [788] {main}
  esm import pkg-a [10]
  esm import specifier pkg-a [10]

error[internal]: Export should be relative path and start with "./", but got ../../index.js



Rspack compiled with 1 error (1de1b232f302860d0385)"
`;

exports[`StatsTestCases should print correct stats for simple 1`] = `
"PublicPath: (none)
asset bundle.js 589 bytes {main} [emitted] (name: main)
Entrypoint main 589 bytes = bundle.js
chunk {main} bundle.js (main) [entry]
  ./index.js [10] {main}
    entry ./index
./index.js [10] {main}
  entry ./index
Rspack compiled successfully (21b6a905e9c471003723)"
`;

exports[`StatsTestCases should print correct stats for simple-module-source 1`] = `
"PublicPath: (none)
asset bundle.js 631 bytes [emitted] (name: main)
Entrypoint main 631 bytes = bundle.js
./raw.png
./index.js
./stringModule.js
Rspack compiled successfully"
`;

exports[`StatsTestCases should print correct stats for stats-hooks 1`] = `
"PublicPath: (none)
asset bundle.js 589 bytes [emitted111] (name: main) [testA: aaaaaa]
Entrypoint main 589 bytes = bundle.js
./index.js
Rspack compiled successfully"
`;

exports[`StatsTestCases should print correct stats for try-require--module 1`] = `
"warning[internal]: Resolve error
  ┌─ tests/statsCases/try-require--module/index.js:2:5
  │  
1 │   try {
2 │       require('./missing-module')
  │ ╭────────^
3 │ │ } catch (e) {
  │ ╰──^ Failed to resolve ./missing-module in <PROJECT_ROOT>/tests/statsCases/try-require--module/index.js
4 │   
5 │   }
6 │   



Rspack compiled with 1 warning"
`;

exports[`StatsTestCases should print correct stats for try-require-resolve-module 1`] = `
"warning[internal]: Resolve error
  ┌─ tests/statsCases/try-require-resolve-module/index.js:2:5
  │  
1 │   try {
2 │       require.resolve('./missing-module')
  │ ╭────────^
3 │ │ } catch (e) {
  │ ╰──^ Failed to resolve ./missing-module in <PROJECT_ROOT>/tests/statsCases/try-require-resolve-module/index.js
4 │   
5 │   }
6 │   



Rspack compiled with 1 warning"
`;

exports[`StatsTestCases should print correct stats for try-require-resolve-weak-module 1`] = `
"warning[internal]: Resolve error
  ┌─ tests/statsCases/try-require-resolve-weak-module/index.js:2:5
  │  
1 │   try {
2 │       require.resolveWeak('./missing-module')
  │ ╭────────^
3 │ │ } catch (e) {
  │ ╰──^ Failed to resolve ./missing-module in <PROJECT_ROOT>/tests/statsCases/try-require-resolve-weak-module/index.js
4 │   
5 │   }
6 │   



Rspack compiled with 1 warning"
`;
